<resources>
    <string name="app_name">SC2 Build Player</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_rate">Rate this App</string>
    <string name="menu_play_build">Play Build</string>
    <string name="menu_new_build">New Build</string>
    <string name="menu_edit_build">Edit</string>
    <string name="menu_delete_build">Delete</string>
    <string name="menu_move_item_up">Move up</string>
    <string name="menu_move_item_down">Move down</string>
    <string name="menu_delete_item">Delete</string>
    <string name="menu_export_build">Export</string>
    <string name="menu_import_build">Import Build&#8230;</string>
    <string name="menu_preview">Preview</string>
	<string name="playback_stop">Stop</string>
	<string name="playback_play">Play</string>
	<string name="playback_pause">Pause</string>
	<string name="playback_time_current_total_separator" translatable="false">/</string>
	<string name="playback_build_finished">Build order finished.</string>
	<string name="pref_game_speed">Game Speed</string>
	<string name="pref_game_speed_default" translatable="false">4</string>
	<string name="pref_early_warning">Alert time offset</string>
	<string name="pref_early_warning_summary">You will be given %1$d game seconds advance warning of build items</string>
	<string name="pref_start_time">Default start time</string>
	<string name="pref_start_time_summary">Builds start at %1$d game seconds (Increase to give yourself time to get workers mining, etc.)</string>
	<string name="pref_player_category_title">Player</string>
	<string name="pref_database_category_title">Database</string>
	<string name="pref_restore_database_title">Reset Database</string>
	<string name="pref_restore_database_summary">Restores standard build orders. Warning: all user data will be lost!</string>
	<string name="pref_restore_database_succeeded">Database was reset</string>
	<string name="pref_about_category_title">About</string>
	<string name="pref_changelog_title">View Change Log&#8230;</string>
	<string name="pref_rate_this_app_title">Rate this App</string>
	<string name="pref_rate_this_app_summary">Provide feedback to help improve and promote this app</string>
	<string name="pref_upgrade_to_pro_title">Buy Pro version</string>
	<string name="pref_upgrade_to_pro_summary">No ads, extra functionality</string>
	<string name="pref_tracking_title">Improve this App</string>
	<string name="pref_tracking_summary">Allow sending of anonymized usage data to help make this app better</string>
	<string name="pref_general_category_title">General</string>
	<string name="pref_show_status_bar_title">Show Status Bar</string>
	<string name="pref_show_status_bar_summary">Requires restart to take effect</string>
	<string name="pref_translate_title">Translate</string>
	<string name="pref_translate_summary">Help translate text in this app to your language</string>
	<string name="pref_show_ads_title">Advertisements</string>
	<string name="pref_show_ads_summary">Support development of the app by displaying ad banners</string>
	<string name="numberpicker_units_label">in-game seconds</string>
	<string name="race_terran">Terran</string>
	<string name="race_protoss">Protoss</string>
	<string name="race_zerg">Zerg</string>
	<string name="race_any">Any</string>
	<string name="expansion_wol">Wings of Liberty</string>
	<string name="expansion_hots">Heart of the Swarm</string>
	<string name="expansion_lotv">Legacy of the Void</string>
	<string name="error_loading_std_builds">Error loading standard builds: %1$s</string>
	<string name="dlg_tts_install_prompt">Text-to-Speech support not found. Install it now?</string>
	<string name="dlg_yes">Yes</string>
	<string name="dlg_no">No</string>
	<string name="dlg_no_market_error">Error: Couldn\'t launch Play Store</string>
	<string name="dlg_game_speed_alert">Game Speed: %1$s</string>
	<string name="dlg_confirm_db_reset_title">Reset Database?</string>
	<string name="dlg_confirm_db_reset_message">Warning: this will permanently delete any custom build orders and/or modifications to standard builds you have made!</string>
	<string name="dlg_confirm_delete_build_title">Delete Build?</string>
	<string name="dlg_confirm_delete_build_message">This will permanently delete the build unless you have previously backed it up.</string>
	<string name="dlg_enter_filename_title">Enter filename</string>
	<string name="dlg_enter_filename_message">Enter filename for the build:</string>
	<string name="dlg_invalid_filename">Invalid filename!</string>
	<string name="dlg_wrote_file_to_dir">Successfully wrote %1$s to %2$s</string>
	<string name="dlg_couldnt_write_file">Error: Couldn\'t write %1$s, reason: %2$s</string>
	<string name="dlg_confirm_change_faction_title">Change Faction?</string>
	<string name="dlg_confirm_change_faction_message">This will delete all existing build items!</string>
	<string name="error_unknown_author">Unspecified source</string>
	<string name="error_couldnt_create_builds_dir">Error: couldn\'t create %1$s directory. Is your SD card mounted?</string>
	<string name="add_build_footer">Add Build&#8230;</string>
	<string name="brief_source_label">Source:</string>
	<string name="brief_author_label">Author:</string>
	<string name="edit_build_new_title">New Build</string>
	<string name="edit_build_edit_title">Edit Build</string>
	<string name="edit_build_info_title">Info</string>
	<string name="edit_build_notes_title">Notes</string>
	<string name="edit_build_items_title">Items</string>
	<string name="edit_build_vs">Vs.</string>
	<string name="edit_build_title_hint">Title</string>
	<string name="edit_build_author_hint">Author</string>
	<string name="edit_build_source_url_hint">Source URL (http:// &#8230;)</string>
	<string name="edit_build_source_title_hint">Source Title (e.g. "Liquipedia")</string>
	<string name="edit_build_notes_hint">Notes (accepts HTML tags)</string>
	<string name="edit_build_add_item_footer">Add Build Item&#8230;</string>
	<string name="edit_build_invalid_time_message">Please enter a valid time</string>
	<string name="edit_build_invalid_count_message">Please enter a valid item quantity</string>
	<string name="edit_build_no_title_error">Please enter a build title</string>
	<string name="edit_build_not_well_ordered_error">Please make sure build items are ordered by increasing time!</string>
	<string name="edit_build_title_already_taken_error">That title is already in use, please choose a different one</string>
	<string name="edit_build_discarded_changes">Discarded changes</string>
	<string name="edit_build_save_in_progress">Saving…</string>
	<string name="edit_build_save_successful">Build saved</string>
	<string name="edit_build_prompt_save_title">Save changes?</string>
	<string name="edit_build_prompt_save_message">You\'ve made some changes to this build - would you like to save them?</string>
	<string name="edit_build_notes_button_format_h1" translatable="false">H1</string>
	<string name="edit_build_notes_button_format_h2" translatable="false">H2</string>
	<string name="edit_build_notes_button_format_h3" translatable="false">H3</string>
	<string name="edit_build_notes_button_format_a" translatable="false">A</string>
	<string name="edit_build_notes_button_format_b" translatable="false">B</string>
	<string name="edit_build_notes_button_format_p" translatable="false">P</string>
	<string name="edit_build_notes_button_format_br" translatable="false">br</string>
	<string name="dlg_edit_item_title">Edit Item</string>
	<string name="dlg_select_item_title">Select Unit/Upgrade/Ability</string>
	<string name="item_type_unit">Unit</string>
	<string name="item_type_structure">Structure</string>
	<string name="item_type_upgrade">Upgrade</string>
	<string name="item_type_ability">Ability</string>
	<string name="item_type_note">Misc</string>
	<string name="desc_drag_handle">Touch target to reorder build items</string>
	<string name="desc_unit_icon">Icon of the unit, structure, upgrade or ability</string>
	<string name="deleted_items_x_N">Deleted %1$s x%2$d</string>
	<string name="deleted_item">Deleted %1$s</string>
	<string name="edit_build_item_count_template" translatable="false">x%1$d</string>
	<string name="edit_build_item_on_target_template">on %s</string>
	<string name="edit_build_item_time_template" translatable="false">%02d:%02d</string>
	<string name="undo">Undo</string>
	<string name="permission_popup_write_storage_denied_for_exporting">External storage access is needed to export builds</string>
	<string name="permission_popup_read_storage_denied_for_importing">External storage access is needed to import builds</string>
	<string name="permission_popup_settings">Settings</string>
	<string name="dlg_item_label">Item</string>
	<string name="dlg_amount_label">Amount</string>
	<string name="dlg_time_label">Time</string>
	<string name="dlg_supply_label">Supply</string>
	<string name="dlg_target_label">Target</string>
	<string name="dlg_custom_text_label">Custom text</string>
	<string name="dlg_custom_speech_label">Custom speech</string>
	<string name="dlg_clear_label">Clear</string>
	<string name="dlg_minutes_seconds_separator" translatable="false">:</string>
	<string name="dlg_preview_notes_title">Notes Preview</string>
	<string name="dlg_insert_link_title">Insert Link</string>
	<string name="label_hint">Link text</string>
	<string name="url_hint">URL (http:// &#8230;)</string>
	<string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>
    <string name="err">Error</string>
    <string name="verb_structure_generic">Build</string>
    <string name="verb_unit_generic">Train</string>
    <string name="verb_upgrade_generic">Research</string>
    <string name="verb_ability_generic">Use</string>
    <string name="verb_note_generic">Note</string>
    <string name="verb_structure_zerg">Morph</string>
    <string name="verb_unit_zerg">Morph</string>
    <string name="verb_upgrade_zerg">Evolve</string>
    <string name="verb_structure_protoss">Warp in</string>
    <string name="verb_unit_protoss">Warp in</string>
    <string name="sentence_structure_singular_no_target">{verb} {count} {item}</string>
    <string name="sentence_structure_singular_with_target">{verb} {count} {item} on {target}</string>
    <string name="sentence_structure_plural_no_target">{verb} {count} {item}s</string>
    <string name="sentence_structure_plural_with_target">{verb} {count} {item}s on {target}</string>
    <string name="sentence_unit_singular">{verb} {count} {item}</string>
    <string name="sentence_unit_plural">{verb} {count} {item}s</string>
    <string name="sentence_upgrade">{verb} {item}</string>
    <string name="sentence_ability_no_target">{verb} {item}</string>
    <string name="sentence_ability_with_target">{verb} {item} on {target}</string>
	<string name="gameitem_note">Note</string>
	<string name="gameitem_armory">Armory</string>
	<string name="gameitem_banshee">Banshee</string>
	<string name="gameitem_barracks">Barracks</string>
	<string name="gameitem_battlecruiser">Battlecruiser</string>
	<string name="gameitem_bunker">Bunker</string>
	<string name="gameitem_cloak">Cloak</string>
	<string name="gameitem_combat_shield">Combat Shield</string>
	<string name="gameitem_command_center">Command Center</string>
	<string name="gameitem_concussion_shells">Concussion Shells</string>
	<string name="gameitem_cyclone">Cyclone</string>
</resources>