<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/lib/com.kiwiandroiddev.sc2buildassistant">

    <PreferenceCategory
        android:key="pref_key_player_category"
        android:title="@string/pref_player_category_title">

        <ListPreference
            android:defaultValue="@string/pref_game_speed_default"
            android:dialogTitle="@string/pref_game_speed"
            android:entries="@array/pref_game_speed_text"
            android:entryValues="@array/pref_game_speed_values"
            android:key="pref_game_speed"
            android:title="@string/pref_game_speed" />

        <com.kiwiandroiddev.sc2buildassistant.view.NumberPickerPreference
            android:key="pref_early_warning"
            android:summary="@string/pref_early_warning_summary"
            android:title="@string/pref_early_warning"
            app:defaultValue="5"
            app:endRange="60"
            app:startRange="0" />

        <com.kiwiandroiddev.sc2buildassistant.view.NumberPickerPreference
            android:key="pref_start_time"
            android:summary="@string/pref_start_time_summary"
            android:title="@string/pref_start_time"
            app:defaultValue="15"
            app:endRange="9999"
            app:startRange="0" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_general_category"
        android:title="@string/pref_general_category_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_show_status_bar"
            android:summary="@string/pref_show_status_bar_summary"
            android:title="@string/pref_show_status_bar_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_show_ads"
            android:summary="@string/pref_show_ads_summary"
            android:title="@string/pref_show_ads_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_about_category"
        android:title="@string/pref_about_category_title">

        <Preference
            android:key="pref_changelog"
            android:title="@string/pref_changelog_title" />

        <Preference
            android:key="pref_rate_this_app"
            android:summary="@string/pref_rate_this_app_summary"
            android:title="@string/pref_rate_this_app_title" />

        <Preference
            android:key="pref_translate"
            android:summary="@string/pref_translate_summary"
            android:title="@string/pref_translate_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_tracking_enabled"
            android:summary="@string/pref_tracking_summary"
            android:title="@string/pref_tracking_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_database_category"
        android:title="@string/pref_database_category_title">

        <Preference
            android:key="pref_restore_database"
            android:summary="@string/pref_restore_database_summary"
            android:title="@string/pref_restore_database_title" />

    </PreferenceCategory>

</PreferenceScreen>