<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView3"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/screen_edge_padding"
        android:paddingRight="@dimen/screen_edge_padding" >

        <EditText
            android:id="@+id/edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/edit_build_title_hint"
            android:inputType="textCapSentences|textNoSuggestions" >

            <requestFocus />
        </EditText>

        <com.actionbarsherlock.internal.widget.IcsSpinner
            android:id="@+id/edit_expansion_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:paddingTop="@dimen/inter_widget_padding" >
        </com.actionbarsherlock.internal.widget.IcsSpinner>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp" >

            <com.actionbarsherlock.internal.widget.IcsSpinner
                android:id="@+id/edit_faction_spinner"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/textView1" />

            <com.actionbarsherlock.internal.widget.IcsSpinner
                android:id="@+id/edit_vs_faction_spinner"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView1" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:paddingLeft="8dip"
                android:paddingRight="8dip"
                android:text="@string/edit_build_vs"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <EditText
            android:id="@+id/edit_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/edit_build_author_hint"
            android:inputType="textUri|textNoSuggestions"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/edit_source_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/edit_build_source_url_hint"
            android:inputType="textUri|textNoSuggestions"
            android:selectAllOnFocus="true" >
        </EditText>

        <EditText
            android:id="@+id/edit_source_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ems="10"
            android:hint="@string/edit_build_source_title_hint"
            android:inputType="textCapSentences|textNoSuggestions" />
    </LinearLayout>

</ScrollView>